--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div class="container" id="container">
             <div class="cabecera" id="cabecera">
+                <img src="images/dragon.png" alt="logo" id="logo">
                 Hyperblog
                 <span id="tagline">
                     Tu blog de cabecera
