--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div class="container" id="container">
             <div class="cabecera" id="cabecera">
+                <img src="" alt="logo" id="logo">
                 Hyperblog
                 <span id="tagline">
                     Tu blog de cabecera
@@ -22,6 +23,9 @@
                     Excepto si eres un Rockstar. Pero estadisticamente no lo eres... por ahora.
                 </p>
                 <p>Suscribete y dale like</p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi <3
             </div>
         </div>
     </body>
