--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
                     las cosas incre&iacute;bles que se pueden hacer con ramas
                 </p>
                 <p>
+                    <img src="images/team.png" width="100%" alt="">
+                </p>
+                <p>
                     Los blogs son la mejor forma de compartir informacion y tus ideas.
                     Mucho mejor que ir a conferencias y salir en Youtube.
                     Excepto si eres un Rockstar. Pero estadisticamente no lo eres... por ahora.
