--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
                     las cosas incre&iacute;bles que se pueden hacer con ramas
                 </p>
                 <p>
-                    <img src="images/team.png" width="100%" alt="">
+                    <img src="https://i.imgur.com/U8lRHng.png" width="100%" alt="">
                 </p>
                 <p>
                     Los blogs son la mejor forma de compartir informacion y tus ideas.
